syntax = "proto3";

package payment.ios;

option go_package = "github.com/isy/grpc-sandbox/payment;ios";

import "google/protobuf/empty.proto";
import "payment/ios/message.proto";


service IosService {
    rpc VerifyReceipt (VerifyReceiptRequest) returns (google.protobuf.Empty);
}